[Database, Docker, Java, PHP, Python, Linux] 공부

--- a/Java/Basic/02. Environment.md
+++ b/Java/Basic/02. Environment.md
@@ -26,7 +26,13 @@ JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
   - 소프트웨어 업데이트 (패치)의 유형과 빈도를 변경하여 소프트웨어 배포의 위험부담, 비용 및 급작스런 중단을 줄이면서 소프트웨어의 신뢰성을 향상
 
 ### Java SE
+  - Java 언어 자체와 Java 가상 머신을 포함하고 있다
   - Java 표준 문법을 의미함, 현재 8, 11, 17이 표준으로 채택되어 있다
+  - 일반적인 애플리케이션 개발에 주로 사용
+
+### Java EE
+  - Java SE를 기반으로 추가적인 기능과 라이브러리를 포함하고 있다
+  - 기업 애플리케이션 개발에 자주 사용된다
 
 ## 간단한 프로그램 작성으로 컴파일 이해하기
   1. Profile.java 작성
@@ -48,6 +54,13 @@ JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
 
 
 각 예제로 작성된 파일을 실행하려면 해당 폴더를 프로젝트로 열어서 `cmd`를 이용해서 확인한다.
+
+
+## 프로그래밍
+
+- 값(데이터)을 다루고 명령의 흐름(플로우)을 제어하는 것
+
+정답이고 아니고가 시험엔 중요할지 모르겠지만, 시험이 아닐 땐 과정이 더 중요하다
 
 -----
 
