[Java] short circuit

--- a/Java/Basic/06. Control-Flow-Statement.md
+++ b/Java/Basic/06. Control-Flow-Statement.md
@@ -32,6 +32,33 @@ if( expression1 ) {
 }
 ```
 
+### short circuit (쇼트 서킷)
+
+쇼트 서킷을 로직은 흔하고 많이 사용되므로 잘 익혀두는 것은 좋지만 오용하지 않도록 한다.
+
+조건문 제어는 
+```java
+if((a || b) ) {
+    // a가 참이라면, b의 참/거짓 여부는 상관없이 true가 된다
+    // a가 참이 아니라면, b의 참/거짓 여부를 판별한다
+}
+
+if( a == 3 || b == 5) {
+    // 좌변이 참이라면 우변의 참/거짓은 상관없이 true가 된다
+    // a가 3이 아니라면, 우변의 참/거짓 여부를 판별한다
+}
+
+if((a && b) ) {
+    // a가 참이라면, b의 참/거짓 여부를 점검한다
+    // a가 참이 아니라면 b의 참/거짓 여부는 상관없이 false가 된다
+}
+
+if( a == 3 && b == 5 ) {
+    // a가 3이라면 우변으로 넘어가 조건을 점검한다
+    // a가 3이 아니라면 우변의 조건을 판별하지 않고 false가 된다
+}
+```
+
 ## switch 문
 
 ```java
