--- a/Java/Basic/17. Collection.md
+++ b/Java/Basic/17. Collection.md
@@ -12,22 +12,23 @@ public interface Collection<E> extends Iterable<E>
 
 Collection 인터페이스에서 구현된 메소드들은 다음과 같다.
 
-| 리턴 타입 | 메소드 이름 및 매개 변수  | 설명 |
-| boolean  | add(E e)                | 요소를 추가한다. |
+| 리턴 타입  | 메소드 이름 및 매개 변수      | 설명 |
+|----------|-------------------------|--------------------------------------------|
+| boolean  | add(E e)                | 요소를 추가한다.                               |
 | boolean  | addAll(Collection)      | 매개변수로 넘어온 Collection의 모든 요소를 추가한다. |
-| void     | clear()                 | Collection의 모든 요소 데이터를 지운다. |
+| void     | clear()                 | Collection의 모든 요소 데이터를 지운다.           |
 | boolean  | contains(Object)        | 매개 변수로 넘어온 객체가 해당 컬렉션에 있는지 확인한다. 동일한 값이 있으면 true를 리턴한다. |
 | boolean  | containsAll(Collection) | 매개 변수로 넘어온 객체가 해당 컬렉션에 있는지 확인한다. 매개 변수로 넘어온 컬렉션에 있는 요소들과 동일한 값들이 모두 있으면 true를 리턴한다. |
-| boolean  | equals(Object)          | 매개 변수로 넘어온 객체와 같은 객체인지 확인한다. |
-| int      | hashCode()              | 해시 코드값을 리턴한다. |
-| boolean  | isEmpty()               | 컬렉션이 비어있는지 확인한다. 비어있으면 true를 리턴한다. |
+| boolean  | equals(Object)          | 매개 변수로 넘어온 객체와 같은 객체인지 확인한다.        |
+| int      | hashCode()              | 해시 코드값을 리턴한다.                            |
+| boolean  | isEmpty()               | 컬렉션이 비어있는지 확인한다. 비어있으면 true를 리턴한다.  |
 | Iterator | iterator()              | 데이터를 한 건씩 처리하기 위한 Iterator 객체를 리턴한다. |
-| boolean  | remove(Object)          | 매개 변수와 동일한 객체를 삭제한다. |
-| boolean  | removeAll(Collection)   | 매개 변수로 넘어온 객체들을 해당 컬렉션에서 삭제한다. |
-| boolean  | retainAll(Collection)   | 매개 변수로 넘오온 객체들만을 컬렉션에서 삭제한다. |
-| int      | size()                  | 요소의 개수를 리턴한다. |
-| Object[] | toArray()               | 컬렉션에 있는 데이터들을 배열로 복사한다. |
-| <T> T[]  | toArray(T[])            | 컬렉션에 잇는 데이터들을 지정한 타입의 배열로 복사한다. |
+| boolean  | remove(Object)          | 매개 변수와 동일한 객체를 삭제한다.                   |
+| boolean  | removeAll(Collection)   | 매개 변수로 넘어온 객체들을 해당 컬렉션에서 삭제한다.      |
+| boolean  | retainAll(Collection)   | 매개 변수로 넘오온 객체들만을 컬렉션에서 삭제한다.        |
+| int      | size()                  | 요소의 개수를 리턴한다.                             |
+| Object[] | toArray()               | 컬렉션에 있는 데이터들을 배열로 복사한다.                |
+| <T> T[]  | toArray(T[])            | 컬렉션에 잇는 데이터들을 지정한 타입의 배열로 복사한다.     |
 
 ## Set
 
@@ -35,16 +36,22 @@ Collection 인터페이스에서 구현된 메소드들은 다음과 같다.
 
 어떤 데이터가 존재하는지 확인하기 위한 목적
 
+인터페이스에 속한다.
+
 1. HashSet
-  - 순서가 전혀 필요 없는 데이터를 해시 테이블에 저장한다.
-  - 시간 복잡도 : O(1)
+    - 순서가 전혀 필요 없는 데이터를 해시 테이블에 저장한다.
+    - 시간 복잡도 : O(1)
+
 2. LinkedHashSet
-  - 연결된 목록 타입으로 구현된 해시 테이블에 데이터를 저장한다. 저장된 순서에 따라 값이 정렬된다.
-  - 시간 복잡도 : O(1)
+    - 연결된 목록 타입으로 구현된 해시 테이블에 데이터를 저장한다. 저장된 순서에 따라 값이 정렬된다.
+    - 시간 복잡도 : O(1)
+
 3. TreeSet
-  - red-black 트리 타입으로 값이 저장되며, 저장된 데이터의 값에 따라서 정렬되는 Set
-  - 시간 복잡도 : O(log n)
+    - red-black 트리 타입으로 값이 저장되며, 저장된 데이터의 값에 따라서 정렬되는 Set
+    - 시간 복잡도 : O(log n)
+
 4. SortedSet
+    - 정렬된 set
 
 ## List
 
