[JAVA] Mac 환경 JAVA_HOME 설정

--- a/Java/Basic/02. Environment.md
+++ b/Java/Basic/02. Environment.md
@@ -62,6 +62,56 @@ JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
 
 정답이고 아니고가 시험엔 중요할지 모르겠지만, 시험이 아닐 땐 과정이 더 중요하다
 
+## 자바 설정
+
+### 윈도우
+
+미작성
+
+### 맥
+
+```shell
+/usr/libexec/java_home -V
+```
+
+```shell
+Matching Java Virtual Machines (10):
+    21.0.2 (arm64) "Homebrew" - "OpenJDK 21.0.2" /opt/homebrew/Cellar/openjdk/21.0.2/libexec/openjdk.jdk/Contents/Home
+    17.0.8 (arm64) "Amazon.com Inc." - "Amazon Corretto 17" /Users/geol/Library/Java/JavaVirtualMachines/corretto-17.0.8/Contents/Home
+    17.0.8 (arm64) "Oracle Corporation" - "Java SE 17.0.8" /Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
+    11.0.21 (arm64) "Amazon.com Inc." - "Amazon Corretto 11" /Users/geol/Library/Java/JavaVirtualMachines/corretto-11.0.21/Contents/Home
+    11.0.16.1 (arm64) "Microsoft Build of OpenJDK" - "Microsoft Build of OpenJDK 11" /Library/Java/JavaVirtualMachines/microsoft-11.jdk/Contents/Home
+    11.0.11 (x86_64) "AdoptOpenJDK" - "AdoptOpenJDK 11" /Library/Java/JavaVirtualMachines/adoptopenjdk-11.jdk/Contents/Home
+    1.8.202.08 (x86_64) "Oracle Corporation" - "Java" /Library/Internet Plug-Ins/JavaAppletPlugin.plugin/Contents/Home
+    1.8.0_392 (arm64) "Amazon" - "Amazon Corretto 8" /Users/geol/Library/Java/JavaVirtualMachines/corretto-1.8.0_392/Contents/Home
+    1.8.0_302 (x86_64) "Eclipse Temurin" - "Eclipse Temurin 8" /Library/Java/JavaVirtualMachines/temurin-8.jdk/Contents/Home
+    1.8.0_202 (x86_64) "Oracle Corporation" - "Java SE 8" /Library/Java/JavaVirtualMachines/jdk1.8.0_202.jdk/Contents/Home
+/opt/homebrew/Cellar/openjdk/21.0.2/libexec/openjdk.jdk/Contents/Home
+```
+JVM? 경로가 뒤죽박죽이긴 하다, 원래 이런가? jenv 라는 것을 찾아보면 좀 더 편리하게 할 수 있는 방법이 존재한다.
+
+현재 설치된 java 버전들이 등장한다. 현재 맥은 m2라서 arm64 프로세서를 따라 가야한다
+
+.zshrc 에서 환경변수 설정이 필요하다
+
+`cd ~`, `vi .zshrc`를 하고 가장 하단에 다음과 같이 작성했다
+
+```
+# Java Home
+#export JAVA_HOME=$(/usr/libexec/java_home -v 1.8.0_392)
+#export JAVA_HOME=$(/usr/libexec/java_home -v 11.0.21)
+export JAVA_HOME=$(/usr/libexec/java_home -v 17.0.8)
+#export JAVA_HOME=$(/usr/libexec/java_home -v 21.0.2)
+```
+
+각 버전별로 JAVA_HOME을 지정해주었다. 
+
+프로젝트에 따라서 다른 버전들을 사용해야 하는 경우가 존재한다
+
+`source .zshrc`로 명령을 준 다음, `java -version` 명령을 준 뒤, 해당 버전이 맞는지 확인한다.
+
+바꿔가면서 쓰장~
+
 -----
 
 - [LTS](https://ko.wikipedia.org/wiki/%EC%9E%A5%EA%B8%B0_%EC%A7%80%EC%9B%90_%EB%B2%84%EC%A0%84)
