--- a/Java/Basic/02. Environment.md
+++ b/Java/Basic/02. Environment.md
@@ -9,10 +9,10 @@
   - 바이트코드? JVM이 이해할 수 있는 언어로 변환된 이진 표현
 
 ## JDK과 JRE
-  - JDK(자바 개발 도구) : JRE + 개발에 필요한 실행파일 (javac.exe)
+  - JDK(자바 개발 도구) : JRE + 개발에 필요한 실행파일들 (javac.exe + javap.exe 드ㅇ등)
   - JRE(자바 실행 환경) : JVM + 클래스 라이브러리 (java API)
 
-JDK 는 JRE 에 속해있으며, JRE 는 JVM 에 속해있다.
+JDK 는 JRE와 개발툴이 있으며, JRE 는 JVM와 클래스 라이브러리가 있다.
 
 ## JVM (자바 가상 머신)
   - 운영체제에 관계없이 자바를 구동할 수 있는 가상환경을 제공
