[CS, JAVA] 스레드와 프로세스

--- a/Java/Basic/00. OOP.md
+++ b/Java/Basic/00. OOP.md
@@ -9,11 +9,11 @@
 
 객체의 접근 제어자로 쓰이는 private, protected, public, default
 
-## 상속 : 재사용 및 확장 (a kind of)
+## 상속 : 재사용 및 확장 (a kind of: ~의 한 종류)
 
 <img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-2.png?raw=true" />
 
-객체 지향에서의 상속에서 흔히 부모-자식 관계에 대해 설명해주지만, 이런 개념보단 확장의 개념으로 동물-포유류-고래 순으로 집합 관계로 보는 것이 좋다
+객체 지향에서의 상속에서 흔히 부모-자식 관계에 대해 설명해주지만, 이런 개념보단 확장의 개념으로 동물-포유류-고래 순으로 **~의 한 종류** 집합 관계로 보는 것이 좋다.
 
 ```java
 Animal animal = new Animal();
@@ -27,7 +27,7 @@ Animal penguin = new Penguin();
 
 <img src="https://github.com/Geol2/Today-I-Learned/blob/main/Java/images/extends-3.png?raw=true" />
 
-무엇을 할 수 있는~ 형태로 만드는 것이 좋다
+무엇을 **할 수 있는 ~** 형태로 만드는 것이 좋다
 
 ## 추상화 : 모델링
 
