[Java] 데몬스레드

--- a/Java/Basic/19. Thread.md
+++ b/Java/Basic/19. Thread.md
@@ -72,6 +72,19 @@ main : start() 호출 후
 Thread-0: run()
 main : main() end
 ```
+## 데몬 스레드
+
+- 데몬 : 악마, 악령이란 단어도 있으나 신과 인간 사이에서 협력해주는 매개가 되는 역할을 주로 했다고 사전에 나온다.
+
+시스템 백그라운드에서 주로 동작하며 수행하는 것을 데몬 스레드나 데몬 프로세스라고 흔히 부른다.
+
+- 사용자 스레드 : 프로그램의 주요 작업을 수행한다. 사용자 스레드가 모두 종료되면 JVM은 자동으로 종료된다.
+- 데몬 스레드 : 백그라운드에서 보조적인 작업을 수행하며 사용자 스레드가 모두 종료되면 데몬 스레드는 자동으로 종료된다.
+
+JVM은 데몬 스레드의 실행완료를 기다리지 않고 종료되며 사용자 스레드가 모두 종료되면 자바 프로그램도 종료된다.
+
+- `setDaemon(boolean)` 설정은 `start()` 메서드 전에 설정해주어야 하며 이후 변경되지 않고 기본으로 false 이다.
+- 체크 예외인 `InterruptedException`을 반드시 잡아주어야 한다. `run()` 체크 예외를 밖으로 던질 수 없는 구조적 한계가 존재한다.
 
 ## Runnable
 
