[JAVA] 스레드 내용 추가

--- a/Java/Basic/19. Thread.md
+++ b/Java/Basic/19. Thread.md
@@ -16,8 +16,15 @@
 
 Runnable 인터페이스나 Thread 클래스를 직/간접적으로 구현한 클래스만 스레드로 처리될 수 있다.
 
-- Runnable 인터페이스를 구현하여 사용
-- Thread 클래스를 확장하여 사용
+1. Runnable 인터페이스를 구현하여 사용
+
+2. Thread 클래스를 확장하여 사용
+
+3. 더 다양한 방법으로 중첩 클래스와 익명 클래스, 람다로도 만들 수 있고 1, 2 번에 베이스로 들어간다.
+
+둘 중에 뭐 써야하는 것에 대해선 장단점이 있지만 2번의 방식보단 1번의 방식을 사용하는 방식이 더 낫다.
+
+이유는 단일 상속만 허용하고 있는 것도 있기 때문에 인터페이스를 사용하는 것이 더 낫다.
 
 선언 시에는 `public void run()` 메소드를 꼭 선언해야 한다.
 
@@ -72,29 +79,18 @@ main : start() 호출 후
 Thread-0: run()
 main : main() end
 ```
-## 데몬 스레드
-
-- 데몬 : 악마, 악령이란 단어도 있으나 신과 인간 사이에서 협력해주는 매개가 되는 역할을 주로 했다고 사전에 나온다.
-
-시스템 백그라운드에서 주로 동작하며 수행하는 것을 데몬 스레드나 데몬 프로세스라고 흔히 부른다.
-
-- 사용자 스레드 : 프로그램의 주요 작업을 수행한다. 사용자 스레드가 모두 종료되면 JVM은 자동으로 종료된다.
-- 데몬 스레드 : 백그라운드에서 보조적인 작업을 수행하며 사용자 스레드가 모두 종료되면 데몬 스레드는 자동으로 종료된다.
-
-JVM은 데몬 스레드의 실행완료를 기다리지 않고 종료되며 사용자 스레드가 모두 종료되면 자바 프로그램도 종료된다.
-
-- `setDaemon(boolean)` 설정은 `start()` 메서드 전에 설정해주어야 하며 이후 변경되지 않고 기본으로 false 이다.
-- 체크 예외인 `InterruptedException`을 반드시 잡아주어야 한다. `run()` 체크 예외를 밖으로 던질 수 없는 구조적 한계가 존재한다.
 
 ## Runnable
 
 ```java
+// Runable 인터페이스를 구현
 public class RunnableSample implements Runable {
     public void run() {
         System.out.println("This is RunnableSample's run() method.");
     }
 }
 
+// Thread 를 상속
 class ThreadSample extends Thread {
     public void run() {
         System.out.println("This is Thread's run() method.");
@@ -133,6 +129,78 @@ RunThreads.runBasic() method is ended.
 
 스레드가 여러개가 존재하면 그 종료 순서는 실행마다 보장할 수 없다고 한다.
 
+```java
+public class ManyThreadMainV1 {
+
+    public static void main(String[] args) {
+        log("main() Start");
+
+        HelloRunnable helloRunnable = new HelloRunnable();
+        Thread t1 = new Thread(helloRunnable);
+        t1.start();
+        Thread t2 = new Thread(helloRunnable);
+        t2.start();
+        Thread t3 = new Thread(helloRunnable);
+        t3.start();
+
+        log("main() End");
+    }
+}
+```
+스레드 3개를 생성할 때, 모두 같은 HelloRunnable을 스레드의 실행 작업으로 전달하여 HelloRunnable 의 run() 메서드를 실행한다.
+
+```java
+public class ManyThreadMainV2 {
+
+    public static void main(String[] args) {
+        log("main() Start");
+
+        HelloRunnable helloRunnable = new HelloRunnable();
+        for (int i = 0; i < 100; i++) {
+            Thread thread = new Thread(helloRunnable);
+            thread.start();
+        }
+
+        log("main() End");
+    }
+}
+```
+
+```java
+// 람다를 사용
+Thread thread = new Thread(() -> { log("run"); });
+```
+
+```java
+// 익명 클래스를 사용
+Thread thread = new Thread(new Runnable() {
+    public void run() {
+        log("run() start");
+    }
+});
+```
+
+```java
+public class ManyThreadMainV3 {
+
+    public static void main(String[] args) {
+        log("main() start");
+
+        MyRunnable myRunnable = new MyRunnable();
+        Thread t1 = new Thread(myRunnable);
+        t1.start();
+        
+        log("main() end");
+    }
+
+    static class MyRunnable implements Runnable {
+        @Override
+        public void run() {
+            log("run() start");
+        }
+    }
+}
+```
 
 ## 스레드의 상태
 
@@ -151,6 +219,18 @@ RunThreads.runBasic() method is ended.
 프로세스가 중간에 종료될 때,
 
 데몬 스레드가 종료되지 않아도 실행 중인 일반 스레드가 없다면 종료한다.
+
+- 데몬 : 악마, 악령이란 단어도 있으나 신과 인간 사이에서 협력해주는 매개가 되는 역할을 주로 했다고 사전에 나온다.
+
+시스템 백그라운드에서 주로 동작하며 수행하는 것을 데몬 스레드나 데몬 프로세스라고 흔히 부른다.
+
+- 사용자 스레드 : 프로그램의 주요 작업을 수행한다. 사용자 스레드가 모두 종료되면 JVM은 자동으로 종료된다.
+- 데몬 스레드 : 백그라운드에서 보조적인 작업을 수행하며 사용자 스레드가 모두 종료되면 데몬 스레드는 자동으로 종료된다.
+
+JVM은 데몬 스레드의 실행완료를 기다리지 않고 종료되며 사용자 스레드가 모두 종료되면 자바 프로그램도 종료된다.
+
+- `setDaemon(boolean)` 설정은 `start()` 메서드 전에 설정해주어야 하며 이후 변경되지 않고 기본으로 false 이다.
+- 체크 예외인 `InterruptedException`을 반드시 잡아주어야 한다. `run()` 체크 예외를 밖으로 던질 수 없는 구조적 한계가 존재한다.
 
 ## synchronized 관하여
 
@@ -187,3 +267,98 @@ join() : 스레드가 종료될 때까지 기다린다
 interrupt() : 스레드를 종료시키고 sleep(), join(), wait() 메소드가 호출되어 대기 중인 상태에만 interrupt()메소드가 처리된다.
 
 ## 스레드 그룹
+
+
+
+
+
+
+
+-----
+
+# 스레드 문제 1
+
+다음 요구사항에 맞게 멀티스레드 프로그램을 작성하라.
+
+1. `Thread` 클래스를 상속받은 `CounterThread`라는 스레드 클래스를 만들자.
+2. 이 스레드는 1부터 5까지의 숫자를 1초 간격으로 출력해야 한다. 스레드로 동작하는 `log()` 기능을 사용해서 출력하라.
+3. `main()` 메서드에서 `CounterThread` 스레드 클래스를 만들고 실행해라.
+4. 실행결과를 참고하자.
+
+### 실행 결과
+```
+09:46:23.329 [  Thread-0] value : 1
+09:46:23.329 [  Thread-0] value : 2
+09:46:23.329 [  Thread-0] value : 3
+09:46:23.329 [  Thread-0] value : 4
+09:46:23.329 [  Thread-0] value : 5
+```
+
+### 작성코드
+
+```java
+public class startTest2Main {
+
+    static class MyThread extends Thread {
+        @Override
+        public void run() {
+            try {
+                for (int i = 1; i <= 5; i++) {
+                    log("value : " + i);
+                    Thread.sleep(1000);
+                }
+            } catch (InterruptedException e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
+
+    public static void main(String[] args) {
+        MyThread counterThread = new MyThread();
+        counterThread.start();
+    }
+}
+```
+
+# 스레드 문제 2
+
+1. `Runnable` 인터페이스를 구현하여 `CounterThread` 라는 스레드 클래스를 만들자.
+2. 이 스레드는 1부터 5까지의 숫자를 1초 간격으로 출력해야 한다. 스레드로 동작하는 `log()` 기능을 사용해서 출력하라.
+3. `main()` 메서드에서 `CounterThread` 스레드 클래스를 만들고 실행해라.
+4. 실행결과를 참고하자.
+5. 스레드 이름을 "counter"로 지정해야 한다.
+
+### 실행 결과
+```
+09:46:23.329 [  Thread-0] value : 1
+09:46:23.329 [  Thread-0] value : 2
+09:46:23.329 [  Thread-0] value : 3
+09:46:23.329 [  Thread-0] value : 4
+09:46:23.329 [  Thread-0] value : 5
+```
+
+### 작성코드
+```java
+public class startTest1Main {
+
+    static class MyRunnable implements Runnable {
+        @Override
+        public void run() {
+            try {
+                for (int i = 1; i <= 5; i++) {
+                    log("value : " + i);
+                    Thread.sleep(1000);
+                }
+            } catch (InterruptedException e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
+
+    public static void main(String[] args) {
+        Thread counterThread = new Thread(new MyRunnable(), "counter");
+        counterThread.start();
+    }
+}
+
+```
