add : 객체지향에서 중요하다고 생각하는 것

--- a/Java/Basic/00. OOP.md
+++ b/Java/Basic/00. OOP.md
@@ -5,6 +5,10 @@
 - 추상화
 - 다형성
 
+# 객체 지향에서 가장 중요한 것?
+
+- 생성자를 통한 유효한 상태 보장과 접근제이자를 통한 책임분리
+
 ## 캡슐화 : 정보은닉
 
 객체의 접근 제어자로 쓰이는 private, protected, public, default
