[Java] Pass By Reference, Value 수정

--- a/Java/Basic/08. reference-type.md
+++ b/Java/Basic/08. reference-type.md
@@ -1,8 +1,40 @@
-# Pass By Value, Pass By Reference
+# Pass By Value & Pass By Reference
 
-해당 관련 자료는 공식문서에는 개념이 존재하지 않았다. (찾으면 제보 좀..)
+공식문서에는 해당 내용이 잘 안나오지만, 대략적으로 코드를 만들어서 확인해볼 수 있다.
 
-이해를 위해 다음과 같은 코드를 작성
+```java
+public class PassExample {
+    // 1. 기본 타입 (Primitive) - Pass by Value
+    static void changePrimitive(int x) {
+        x = 100;  // 복사본만 변경
+    }
+    
+    // 2. 객체 - Pass by Value (참조값의 복사)
+    static void changeObject(int[] arr) {
+        arr[0] = 999;  // 같은 객체를 가리키므로 원본 변경됨
+    }
+    
+    static void changeReference(int[] arr) {
+        arr = new int[]{100, 200};  // 새 객체 할당 (원본에 영향 없음)
+    }
+
+    public static void main(String[] args) {
+        // 기본 타입
+        int num = 10;
+        changePrimitive(num);
+        System.out.println("num: " + num);  // 10 (변경 안됨)
+        
+        // 객체 - 내용 변경
+        int[] array = {1, 2, 3};
+        changeObject(array);
+        System.out.println("array[0]: " + array[0]);  // 999 (변경됨)
+        
+        // 객체 - 참조 변경
+        changeReference(array);
+        System.out.println("array[0]: " + array[0]);  // 999 (변경 안됨)
+    }
+}
+```
 
 ## Swap 예제 1
 ```java
