[Java] reference-type 추가

--- a/Java/Basic/08. reference-type.md
+++ b/Java/Basic/08. reference-type.md
@@ -34,6 +34,86 @@ public class PassExample {
         System.out.println("array[0]: " + array[0]);  // 999 (변경 안됨)
     }
 }
+
+public class PassExample {
+    // Static 변수들 - 메서드 영역에 저장
+    static int callCount = 0;           // 메서드 호출 횟수 추적
+    static String lastOperation = "";   // 마지막 수행된 작업
+    static int[] sharedArray = {10, 20, 30}; // 모든 메서드가 공유하는 배열
+    
+    // Static 메서드 - 호출 추적
+    static void trackCall(String methodName) {
+        callCount++;
+        lastOperation = methodName;
+        System.out.println("[TRACK] " + methodName + " called. Total calls: " + callCount);
+    }
+    
+    // Static 메서드 - 공유 배열 조작
+    static void modifySharedArray(int index, int value) {
+        trackCall("modifySharedArray");
+        if (index < sharedArray.length) {
+            sharedArray[index] = value;
+        }
+    }
+    
+    // 기존 메서드들에 추적 기능 추가
+    static void changePrimitive(int x) {
+        trackCall("changePrimitive");
+        x = 100;
+    }
+    
+    static void changeObject(int[] arr) {
+        trackCall("changeObject");
+        arr[0] = 999;
+    }
+    
+    static void changeReference(int[] arr) {
+        trackCall("changeReference");
+        arr = new int[]{100, 200};
+    }
+    
+    // Static 메서드 - 상태 출력
+    static void printStatus() {
+        System.out.println("=== Static Status ===");
+        System.out.println("Call Count: " + callCount);
+        System.out.println("Last Operation: " + lastOperation);
+        System.out.print("Shared Array: ");
+        for (int i = 0; i < sharedArray.length; i++) {
+            System.out.print(sharedArray[i] + " ");
+        }
+        System.out.println("\n=====================");
+    }
+
+    public static void main(String[] args) {
+        System.out.println("프로그램 시작");
+        printStatus();
+        
+        // Static 배열 수정
+        modifySharedArray(0, 999);
+        printStatus();
+        
+        // 기본 타입
+        int num = 10;
+        changePrimitive(num);
+        System.out.println("num: " + num);
+        printStatus();
+        
+        // 객체 - 내용 변경
+        int[] array = {1, 2, 3};
+        changeObject(array);
+        System.out.println("array[0]: " + array[0]);
+        printStatus();
+        
+        // 객체 - 참조 변경
+        changeReference(array);
+        System.out.println("array[0]: " + array[0]);
+        printStatus();
+        
+        // 최종 상태
+        System.out.println("프로그램 종료 전 최종 상태:");
+        printStatus();
+    }
+}
 ```
 
 ## Swap 예제 1
