[Java] : 제네릭 타입제한 추가

--- a/Java/Basic/16. Generic.md
+++ b/Java/Basic/16. Generic.md
@@ -87,3 +87,97 @@ public class CastingGenericDTO<T> implements Serializable {
 - `?` : 명시적으로 지정하기 애매할 때 적는다
 - `? extends 타입` : 명시적으로 지정하기는 애매하지만, 클래스의 상속을 받은 특정 타입만 가능하다는 것을 나타냄
 
+## 타입 매개변수 제한
+
+```java
+public class AnimalHospitalV2<T> {
+    
+    private T animal;
+
+    public void set(T animal) {
+        this.animal = animal;
+    }
+
+    public void checkup() {
+        animal.toString();
+        animal.equals(null);
+    }
+
+    public T getBigger(T target) {
+        return animal.getSize() > target.getSize() ? animal : target;
+    }
+}
+```
+
+`T` 타입에 모든 타입이 올 수 있다.
+
+`AnimalHospitalV2<Dog> dogHospital = new AnimalHospitalV2<>()`, `AnimalHospitalV2<Cat> dogHospital = new AnimalHospitalV2<>()` 만 오고 싶은데 `Integer`, `Double` 등등 모두 올 수 있는 단점이 있다.
+
+`Animal`과 그 자식 클래스에만 제한을 거는 방법은 아래와 같다.
+
+```java
+public class AnimalHospitalV3<T extends Animal> {
+    
+    private T animal;
+
+    public void set(T animal) {
+        this.animal = animal;
+    }
+
+    public void checkup() {
+        animal.toString();
+        animal.equals(null);
+    }
+
+    public T getBigger(T target) {
+        return animal.getSize() > target.getSize() ? animal : target;
+    }
+}
+```
+
+## 제네릭 메서드
+
+```java
+public class GenericMethod {
+
+    public static Object objMethod(Object obj) {
+        System.out.println("Object print : " + obj);
+        return obj;
+    }
+
+    public static <T> T genericMethod(T t) {
+        System.out.println("Object print : " + t);
+        return t;
+    }
+
+    public static <T extends Number> T numberMethod(T t) {
+        System.out.println("bound print : " + t);
+        return t;
+    }
+}
+
+public class MethodMain1 {
+    public static void main(String[] args) {
+        Integer i = 10;
+        Object object = (Integer) GenericMethod.dobjMethod(i);
+
+        System.out.println("명시적 타입 인자 전달");
+        Integer result = GenericMethod.<Integer>genericMethod(i);
+        Integer integerValue = GenericMethod.<Integer>numberMethod(10);
+        Double doubleValue = GenericMethod.<Double>numberMethod(20.0);
+
+        // 결과
+        // Obect print: 10
+        // 명시적 타입 인자 전달
+        // generic print: 10
+        // bound print: 10
+        // bound print: 20
+
+        // 타입추론 가능
+        Integer result2 = GenericMethod.genericMethod(i);
+        Integer integerValue2 = GenericMethod.numberMethod(10);
+        Double doubleValue2 = GenericMethod.numberMethod(20.0);
+        
+    }
+}
+```
