[Java] 제네릭 와일드카드 상한 추가

--- a/Java/Basic/16. Generic.md
+++ b/Java/Basic/16. Generic.md
@@ -181,3 +181,23 @@ public class MethodMain1 {
     }
 }
 ```
+
+## 상한 와일드카드
+
+```java
+static <T extends Animal> void printGenericV2(Box<T> box) {
+    T t = box.get();
+    System.out.println("이름 = " + t.getName());
+}
+
+static void printWildcardV2(Box<? extends Animal> box) {
+    Animal animal = box.get();
+    System.out.println("이름 = " + animal.getName());
+}
+```
+
+와일드카드에도 상한 제한을 둘 수 있다.
+
+`? extends Animal`로 `Animal`과 그 하위타입만 입력 받을 수 있고 다른 타입 입력 시, 컴파일 오류가 발생한다.
+
+`box.get()`을 통해 최대 부모는 Animal이 된다.
